# neural-networks-from-scratch

./: .gitignore  README.md  hello.py  layer_dense.py  main.py  pyproject.toml
