[project]
name = "nnfs"
version = "0.1.0"
description = "Following Neural Networks From Scratch, by Harrison Kinsley"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
]
[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "COM812",
    "D",
    "EM101",
    "EM102",
    "FIX",
    "G001",
    "G002",
    "G003",
    "G004",
    "LOG015",
    "RET504",
    "T201",
    "TD",
    "TRY003",
    "TRY300",
]
[tool.ruff.lint.extend-per-file-ignores]
# test file linting exceptions
"test_*.py" = [
    "S101", # allow the use of asserts
    "FBT", # allow boolean args
    "PLR2004", # allow magic values in comparisons
]
[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
